# odesign

./: .gitignore  Cargo.toml  Makefile.toml  README.md  captain-definition  justfile  rustfmt.toml
.builds/: ci.yml
odesign/: Cargo.toml  README.md
odesign-book/: book.toml  sws.toml
odesign-book/src/: README.md  SUMMARY.md  feature-derive.md  optimalities.md  solver.md
odesign-derive/: Cargo.toml  README.md
odesign-derive/src/: lib.rs
odesign-examples/: Cargo.toml
odesign-examples/examples/a-opt-1dim/: main.rs
odesign-examples/examples/basic/: main.rs
odesign-examples/examples/cd-optimality/: main.rs
odesign-examples/examples/custom-derivatives/: main.rs
odesign-examples/examples/custom-design-bound/: main.rs
odesign-examples/examples/custom-optimality/: main.rs
odesign-examples/examples/michaelis-menten/: main.rs
odesign-examples/examples/mixed-1dim/: main.rs
odesign-examples/examples/mixed-2dim/: main.rs
odesign-examples/examples/polynomial-1dim/: main.rs
odesign-examples/examples/polynomial-3dim/: main.rs
odesign/benches/: a_opt_mixed_1dim.rs  d_opt_mixed_2dim.rs  d_opt_polynomial_3dim.rs
odesign/src/: error.rs  feature.rs  grid.rs  interior_point_method.rs  lib.rs  linear_model.rs  optimal_design.rs  utils.rs
odesign/src/optimality/: a_opt.rs  c_opt.rs  costs_opt.rs  d_opt.rs  mod.rs
odesign/tests/: feature_derive.rs  optimal_design.rs
odesign/tests/feature/: attribute.rs  attribute.stderr  dimension_type.rs  dimension_type.stderr  missing_dimension.rs  missing_dimension.stderr  wrong_dimension.rs  wrong_dimension.stderr
