[workspace]
members = ["odesign", "odesign-derive", "odesign-examples"]
resolver = "2"

[workspace.package]
authors = ["Markus Unkel <markus@unkel.io>"]
version = "0.1.0"
edition = "2021"
description = "odesign is an optimal design of experiments library written in pure rust."
repository = "https://git.sr.ht/~maunke/odesign"
keywords = ["sffs", "statistics", "feature-selection", "optimal-design"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
nalgebra = "0.33.2"
num-dual = "0.11.0"
thiserror = "2.0.11"
faer = "0.20.2"
faer-ext = { version = "0.4.1", features = ["nalgebra"]}
aquamarine = "0.6.0"
katexit = "0.1.4"


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
strip = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
