[workspace]
members = ["odesign", "odesign-derive", "odesign-examples"]
resolver = "2"

[workspace.package]
authors = ["Markus Unkel <markus@unkel.io>"]
version = "0.1.6"
edition = "2024"
description = "odesign is an optimal design of experiments library written in pure rust."
repository = "https://git.sr.ht/~maunke/odesign"
keywords = ["sffs", "statistics", "feature-selection", "optimal-design"]
categories = ["science"]
license = "MIT OR Apache-2.0"
homepage = "https://odesign.rs"
rust-version = "1.86.0"

[workspace.dependencies]
aquamarine = "0.6.0"
faer = "=0.21.8"
faer-ext = { version = "0.5.0", features = ["nalgebra"] }
katexit = "0.1.4"
nalgebra = "0.33.2"
num-dual = "0.11.0"
thiserror = "2.0.11"
odesign = { path = "./odesign", version = "0.1.6"}
odesign-derive = { path = "./odesign-derive", version = "0.1.6"}

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
lto = "fat"
