[package]
name = "odesign-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.96"
quote = "1.0.38"
syn = "2.0.98"
