[package]
name = "odesign"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
aquamarine = { workspace = true }
faer = { workspace = true }
faer-ext = { workspace = true }
katexit = { workspace = true }
nalgebra = { workspace = true }
num-dual = { workspace = true }
odesign_derive = { path = "../odesign-derive"}
rayon = "1.10.0"
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.9.0"
trybuild = "1.0"
