[package]
name = "odesign"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
readme = "../README.md"

[dependencies]
aquamarine = { workspace = true }
faer = { workspace = true }
faer-ext = { workspace = true }
katexit = { workspace = true }
nalgebra = { workspace = true }
num-dual = { workspace = true }
odesign-derive = { workspace = true }
rayon = "1.10.0"
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.9.0"
trybuild = "1.0.103"
criterion = "0.5.1"

[[bench]]
name = "d_opt_polynomial_3dim"
harness = false

[[bench]]
name = "d_opt_mixed_2dim"
harness = false


[[bench]]
name = "a_opt_mixed_1dim"
harness = false
